<resources>
    <string name="app_name">城市蚂蚁</string>
    <string name="login">登陆</string>
    <string name="fast_login">快速登陆</string>
    <string name="qq">QQ</string>
    <string name="weixin">微信</string>
    <string name="webo">微博</string>
    <string name="forgetpw">忘记密码</string>
    <string name="newuser">新号码注册</string>
    <string name="phonenumber">手机号</string>
    <string name="insrtpw">输入密码</string>
    <string name="code">输入验证码</string>
    <string name="reinsrtpw">再次输入密码</string>
    <string name="sendcode">发送验证码</string>
    <string name="bindingphone">绑定手机号</string>

</resources>
